# tql

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.adoc  README.md  index.html
examples/: chat.rs  chat.rsx  todo.rs
examples/chat/: Cargo.toml
examples/chat/src/: main.rs
examples/chat/templates/: chat.hbs
examples/todo/: Cargo.toml
examples/todo-stable/: Cargo.toml
examples/todo-stable/src/: main.rs
examples/todo/src/: main.rs
postgres-tests/: Cargo.toml
presentation/: index.html
presentation/css/: style.css
presentation/reveal.js/plugin/highlight/: highlight.js
sqlite-tests/: Cargo.toml
sqlite-tests/tests/: create.rs  select.rs
src/: aggregates.rs  analyzer.rs  ast.rs  attribute.rs  convert.rs  error.rs  gen.rs  lib.rs  main.rs  methods.rs  optimizer.rs  parser.rs  plugin.rs  sql.rs  state.rs  string.rs  type_analyzer.rs  types.rs
src/ast/: convert.rs  mod.rs
testcrate/: Cargo.toml
testcrate/tests/: fail.rs
testcrate/tests/ui/: aggregate.rs  aggregate.stderr  aggregate_gen.rs  aggregate_syntax.stderr  delete.rs  delete.stderr  delete_expr.rs  delete_expr.stderr  delete_syntax.stderr  insert.rs  insert.stderr  insert_expr.rs  insert_expr.stderr  insert_syntax.rs  macro.rs  macro.stderr  methods.rs  methods.stderr  methods_expr.rs  methods_expr.stderr  parse.rs  parse.stderr  select.rs  select.stderr  select_expr.rs  select_expr.stderr  select_gen.rs  select_gen.stderr  select_join.stderr  select_macro.rs  select_macro.stderr  select_syntax.stderr  sql_table.rs  sql_table.stderr  sql_table_duplicate.rs  sql_table_duplicate.stderr  sql_table_expr.rs  sql_table_expr.stderr  update.rs  update.stderr  (+2 more)
tests/: aggregate.rs  aggregate_expr.rs  connection_expr.rs  create.rs  create_expr.rs  delete.rs  delete_expr.rs  drop.rs  drop_expr.rs  insert.rs  insert_expr.rs  module.rs  select.rs  select_expr.rs  teardown.rs  update.rs  update_expr.rs
tests/compile-fail/: aggregate.rs  aggregate_gen.rs  delete.rs  delete_expr.rs  insert.rs  methods_expr.rs  parse.rs  select.rs  sql_table_duplicate.rs  sql_table_expr.rs  update.rs
tests/connection/: mod.rs
tests/models/: mod.rs
tests/postgres-tests/: Cargo.toml
tests/postgres-tests/tests/: aggregate.rs  create.rs  insert.rs  select.rs
tests/sqlite-tests/: Cargo.toml
tests/sqlite-tests/tests/: aggregate.rs  create.rs  insert.rs  select.rs
tests/sqlite-ui-tests/: Cargo.toml
tests/sqlite-ui-tests/tests/: fail.rs
tests/sqlite-ui-tests/tests/ui/: select.rs  select.stderr
tests/testcrate/: Cargo.toml
tests/testcrate/tests/: fail.rs
tests/testcrate/tests/ui/: aggregate.rs  aggregate.stderr  aggregate_gen.rs  aggregate_gen.stderr  aggregate_syntax.rs  aggregate_syntax.stderr  delete.rs  delete.stderr  delete_expr.rs  delete_expr.stderr  delete_syntax.rs  delete_syntax.stderr  insert.rs  insert.stderr  insert_expr.rs  insert_expr.stderr  insert_missing_fields.rs  insert_missing_fields.stderr  insert_syntax.rs  insert_syntax.stderr  macro.rs  macro.stderr  methods.rs  methods.stderr  methods_expr.rs  methods_expr.stderr  parse.rs  parse.stderr  select.rs  select.stderr  select_expr.rs  select_expr.stderr  select_fk.rs  select_fk.stderr  select_gen.rs  select_gen.stderr  select_join.rs  select_join.stderr  select_macro.rs  select_macro.stderr  (+9 more)
tests/testcrate/tests/ui/connection/: mod.rs
tql_macros/: Cargo.toml
tql_macros/src/: analyzer.rs  arguments.rs  ast.rs  attribute.rs  error.rs  gen.rs  hashmap.rs  lib.rs  methods.rs  optimizer.rs  parser.rs  plugin.rs  sql.rs  stable.rs  state.rs  string.rs  type_analyzer.rs  types.rs
tql_macros/src/analyzer/: aggregate.rs  assignment.rs  filter.rs  get.rs  insert.rs  join.rs  limit.rs  method.rs  mod.rs  sort.rs
tql_macros/src/sql/: dummy.rs  mod.rs  postgres.rs  sqlite.rs
tql_macros/tests/: aggregate.rs  aggregate_expr.rs  create.rs  delete.rs  delete_expr.rs  drop.rs  drop_expr.rs  fail.rs  insert.rs  insert_expr.rs  select.rs  select_expr.rs  update.rs  update_expr.rs
tql_macros/tests/compile-fail/: aggregate.rs  aggregate_gen.rs  delete.rs  delete_expr.rs  insert.rs  insert_expr.rs  macro.rs  methods.rs  methods_expr.rs  select.rs  select_expr.rs  select_gen.rs  sql_table.rs  sql_table_duplicate.rs  sql_table_expr.rs  update.rs  update_expr.rs
