[package]
authors = ["Antoni Boucher <bouanto@zoho.com>"]
categories = ["database"]
name = "tql"
version = "0.1.0"

[dependencies]

[dependencies.postgres]
optional = true
version = "^0.15.1"

[dev-dependencies]
chrono = "^0.4.0"
handlebars-iron = "^0.26.0"
iron = "^0.6.0"
lazy_static = "^1.0.0"
persistent = "^0.4.0"
r2d2 = "^0.8.1"
r2d2_postgres = "^0.14.0"
serde = "^1.0.24"
serde_derive = "^1.0.24"
urlencoded = "^0.6.0"

[dev-dependencies.postgres]
features = ["with-chrono"]
version = "^0.15.1"

[dev-dependencies.tql_macros]
path = "./tql_macros"

[features]
default = ["unstable"]
unstable = ["tql_macros/unstable"]
