[package]
name = "testcrate"
version = "0.1.0"
authors = ["Antoni Boucher <bouanto@zoho.com>"]

[dependencies]
tql = { path = ".." }

[dependencies.postgres]
features = ["with-chrono"]
#version = "^0.15.1"
git = "https://github.com/antoyo/rust-postgres"

[dev-dependencies]
compiletest_rs = "^0.3.3"
