[package]
authors = ["Antoni Boucher <bouanto@zoho.com>"]
categories = ["database"]
name = "tql_macros"
version = "0.1.0"

[dependencies]
rand = "^0.4.2"

[dependencies.proc-macro2]
version = "0.1"

[dependencies.quote]
git = "https://github.com/dtolnay/quote"

[dependencies.syn]
features = ["extra-traits", "printing", "full"]
git = "https://github.com/dtolnay/syn"
rev = "04c5dcac336460374438ddf160bd0cbb689adf7d"

[lib]
proc-macro = true

[features]
unstable = ["proc-macro2/unstable"]
