[package]
authors = ["Antoni Boucher <bouanto@zoho.com>"]
categories = ["database"]
description = "Compile-time ORM (macros)"
license = "MIT"
name = "tql_macros"
repository = "https://github.com/antoyo/tql"
version = "0.1.0"

[dependencies]
rand = "^0.4.2"

[dependencies.proc-macro2]
version = "0.2"

[dependencies.quote]
version = "0.4"

[dependencies.syn]
features = ["extra-traits", "printing", "full"]
version = "0.12"

[lib]
proc-macro = true

[features]
postgres = []
rusqlite = []
unstable = ["proc-macro2/nightly"]
