[package]
authors = ["Antoni Boucher <bouanto@zoho.com>"]
name = "postgres-tests"
version = "0.1.0"

[dependencies]
chrono = "^0.4.0"

[dependencies.postgres]
features = ["with-chrono"]
version = "^0.15.1"

[dependencies.tql]
default-features = false
features = ["chrono", "pg"]
path = "../.."

[dependencies.tql_macros]
features = ["unstable"]
path = "../../tql_macros"
