[package]
name = "testcrate"
version = "0.1.0"
authors = ["Antoni Boucher <bouanto@zoho.com>"]

[dependencies.tql]
features = ["chrono"]
path = "../.."

[dependencies.postgres]
features = ["with-chrono"]
version = "^0.15.1"

[dev-dependencies]
compiletest_rs = {version = "^0.3.19", features = ["stable"]}


[features]
sqlite = ["tql/sqlite"]
pg = ["tql/pg"]
